digiKam 8.5.0 - Release date: 2024-xx-xx

*****************************************************************************************************
NEW FEATURES:


*****************************************************************************************************
BUGFIXES:

001 ==> 490220 - digiKam crashes after a random duration during library scan.
002 ==> 490367 - Offset of 2 Hours with the GPS tracks correlator from geolocation editor.
003 ==> 447133 - Hangs after changing database settings.
004 ==> 376825 - Tag displays do not display correctly after new database is selected.
005 ==> 490385 - Remove All Metadata for File Export does not work when sidecar files are used.
006 ==> 488576 - Crash while showing Video.
007 ==>
008 ==>
009 ==>
010 ==>
011 ==>
012 ==>
013 ==>
014 ==>
015 ==>
016 ==>
017 ==>
018 ==>
019 ==>
020 ==>
021 ==>
022 ==>
023 ==>
024 ==>
025 ==>
026 ==>
027 ==>
028 ==>
029 ==>
030 ==>
031 ==>
032 ==>
033 ==>
034 ==>
035 ==>
036 ==>
037 ==>
038 ==>
039 ==>
040 ==>
041 ==>
042 ==>
043 ==>
044 ==>
045 ==>
046 ==>
047 ==>
048 ==>
049 ==>
050 ==>
051 ==>
052 ==>
053 ==>
054 ==>
055 ==>
056 ==>
057 ==>
058 ==>
059 ==>
060 ==>
061 ==>
062 ==>
063 ==>
064 ==>
065 ==>
066 ==>
067 ==>
068 ==>
069 ==>
070 ==>
071 ==>
072 ==>
073 ==>
074 ==>
075 ==>
076 ==>
077 ==>
078 ==>
079 ==>
080 ==>
081 ==>
082 ==>
083 ==>
084 ==>
085 ==>
086 ==>
087 ==>
088 ==>
089 ==>
090 ==>
091 ==>
092 ==>
093 ==>
094 ==>
095 ==>
096 ==>
097 ==>
098 ==>
099 ==>
100 ==>
101 ==>
102 ==>
103 ==>
104 ==>
105 ==>
106 ==>
107 ==>
108 ==>
109 ==>
110 ==>
111 ==>
112 ==>
113 ==>
114 ==>
115 ==>
116 ==>
117 ==>
118 ==>
119 ==>
120 ==>
121 ==>
122 ==>
123 ==>
124 ==>
125 ==>
126 ==>
127 ==>
128 ==>
129 ==>
130 ==>
131 ==>
132 ==>
133 ==>
134 ==>
135 ==>
136 ==>
137 ==>
138 ==>
139 ==>
140 ==>
141 ==>
142 ==>
143 ==>
144 ==>
145 ==>
146 ==>
147 ==>
148 ==>
149 ==>
150 ==>
151 ==>
152 ==>
153 ==>
154 ==>
155 ==>
156 ==>
157 ==>
158 ==>
159 ==>
160 ==>
161 ==>
162 ==>
163 ==>
164 ==>
165 ==>