@@ -3,6 +3,8 @@ digiKam 8.5.0 - Release date: 2024-xx-xx
 *****************************************************************************************************
 NEW FEATURES:
 
+Bundles: update to last Exiv2 version 0.28.3.
+Bundles: update to last ExifTool version 12.89.
 
 *****************************************************************************************************
 BUGFIXES:
